--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+        <activity  android:name=".RulesActivity"
+                   android:exported="false">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
