--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity  android:name=".RulesActivity"
-                   android:exported="false">
-        </activity>
+                   android:exported="false"/>
+        <activity android:name=".NumOfPlayersActivity"
+                  android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
