--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-        <activity  android:name=".RulesActivity"
-                   android:exported="false"/>
-        <activity android:name=".NumOfPlayersActivity"
-                  android:exported="false"/>
+        <activity
+            android:name=".RulesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NumOfPlayersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CardgameActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
